@@ -119,4 +119,32 @@
    <?=(get_magic_quotes_runtime())?nl2br(stripslashes($description)):nl2br($description); ?>
     </td>
    </tr>  
+<?
+  $cfd=$zen->getCustomFields(1,$page_type,"D");
+  foreach($cfd as $k => $v) {
+    $varfield_type=ereg_replace("[^a-z_]", "", $k);
+    switch($varfield_type) {
+      case "custom_number":
+        $cfv=($varfields["$k"])?$varfields["$k"] : 0;
+        break;
+      case "custom_date":
+        $cfv=($varfields["$k"])?$zen->showDateTime($varfields["$k"]) : "n/a";
+        break;
+      default:
+        $cfv=$varfields["$k"];
+        break;
+    }
+?>
+   <tr>
+    <td colspan="5" class="smallTitleCell" height="<?=$height_num?>"><?=$v?></td>
+   </tr>
+   <tr>
+    <td colspan="5" class="outlined">
+   <?=(get_magic_quotes_runtime())?nl2br(stripslashes($cfv)):nl2br($cfv); ?>
+    </td>
+   </tr>
+
+<?
+  }
+?>
    </table>
